--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,64 @@
-# Compiled Object files
-*.slo
-*.lo
+# ROS #
+######################
+build/
+devel/
+bin/
+lib/
+msg_gen/
+srv_gen/
+ROS_NOBUILD
+CATKIN_IGNORE
+bags/
+
+*Action.msg
+*Feedback.msg
+*Goal.msg
+*Result.msg
+
+
+# Compiled source #
+###################
+*.com
+*.class
 *.o
-
-# Compiled Dynamic libraries
 *.so
+*.pyc
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+
+# General #
+.*.swp
+*.log
+core*
+tags
+cscope.out
+cscope.files
+
+# CMAKE #
+##########
+*.cmake
+*.make
